--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ repositories {
 dependencies {
 
     compile project("medicalTransactionModel")
+    compile project("jmsUtils")
 
     compile 'org.springframework:spring-core:5.0.8.RELEASE'
     compile 'org.springframework:spring-beans:5.0.8.RELEASE'
@@ -33,7 +34,11 @@ dependencies {
 
     compile 'mysql:mysql-connector-java:6.0.6'
 
-    //compile group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
+    // https://mvnrepository.com/artifact/org.springframework/spring-orm
+    compile group: 'org.springframework', name: 'spring-orm', version: '5.0.8.RELEASE'
+
+    //compile group : 'org.hibernate', name: 'hibernate-core', version: '5.3.6.Final'
+    compile 'org.hibernate:hibernate-entitymanager:5.3.6.Final'
 
     compile 'org.liquibase:liquibase-core:3.4.1'
     compile "org.liquibase:liquibase-gradle-plugin:1.1.1"
