--- a/medicalTransactionModel/build.gradle
+++ b/medicalTransactionModel/build.gradle
@@ -10,5 +10,6 @@ repositories {
 }
 
 dependencies {
+    compile group : 'org.hibernate', name: 'hibernate-core', version: '5.3.6.Final'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
