--- a/build.gradle
+++ b/build.gradle
@@ -31,17 +31,19 @@ dependencies {
     compile 'org.springframework:spring-context-support:5.0.8.RELEASE'
     compile 'org.springframework:spring-jdbc:5.0.8.RELEASE'
     compile 'org.springframework:spring-tx:5.0.8.RELEASE'
-
-    compile 'mysql:mysql-connector-java:6.0.6'
-
     // https://mvnrepository.com/artifact/org.springframework/spring-orm
     compile group: 'org.springframework', name: 'spring-orm', version: '5.0.8.RELEASE'
 
-    //compile group : 'org.hibernate', name: 'hibernate-core', version: '5.3.6.Final'
-    compile 'org.hibernate:hibernate-entitymanager:5.3.6.Final'
+    compile 'mysql:mysql-connector-java:6.0.6'
+
+   // compile group : 'org.hibernate', name: 'hibernate-core', version: '5.3.7.Final'
 
     compile 'org.liquibase:liquibase-core:3.4.1'
-    compile "org.liquibase:liquibase-gradle-plugin:1.1.1"
+    //compile "org.liquibase:liquibase-gradle-plugin:1.1.1"
+
+    // https://mvnrepository.com/artifact/org.mindrot/jbcrypt
+    compile group: 'org.mindrot', name: 'jbcrypt', version: '0.4'
+
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.21.0'
