--- a/jmsUtils/build.gradle
+++ b/jmsUtils/build.gradle
@@ -13,7 +13,8 @@ dependencies {
 
     compile("org.apache.activemq:activemq-all:5.14.1")
     // https://mvnrepository.com/artifact/org.springframework/spring-jms
-    compile group: 'org.springframework', name: 'spring-jms', version: '4.3.3.RELEASE'
+    compile group: 'org.springframework', name: 'spring-jms', version: '5.1.2.RELEASE'
+    compile 'javax.jms:javax.jms-api:2.0.1'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
