--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -1,3 +1,3 @@
 hibernate.dialect = org.hibernate.dialect.MySQL57Dialect
-hibernate.show_sql = false
+hibernate.show_sql = true
 hibernate.hbm2ddl.auto = validate
