--- a/jmsUtils/build.gradle
+++ b/jmsUtils/build.gradle
@@ -11,9 +11,15 @@ repositories {
 
 dependencies {
 
-    compile("org.apache.activemq:activemq-all:5.14.1")
-    // https://mvnrepository.com/artifact/org.springframework/spring-jms
-    compile group: 'org.springframework', name: 'spring-jms', version: '5.1.2.RELEASE'
+    compile 'org.springframework:spring-core:5.0.8.RELEASE'
+    compile 'org.springframework:spring-beans:5.0.8.RELEASE'
+    compile 'org.springframework:spring-context:5.0.8.RELEASE'
+    compile 'org.springframework:spring-context-support:5.0.8.RELEASE'
+
+    //compile("org.apache.activemq:activemq-all:5.14.1")
+    compile group: 'org.apache.activemq', name: 'activemq-core', version: '5.7.0'
+
+    compile group: 'org.springframework', name: 'spring-jms', version: '5.0.8.RELEASE'
     compile 'javax.jms:javax.jms-api:2.0.1'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
