--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -1,3 +1,4 @@
 hibernate.dialect = org.hibernate.dialect.MySQL57Dialect
-hibernate.show_sql = true
+hibernate.show_sql = false
+hibernate.format_sql = false
 hibernate.hbm2ddl.auto = validate
