--- a/menu/src/main/resources/jdbc.properties
+++ b/menu/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 jdbc.driver = com.mysql.cj.jdbc.Driver
-jdbc.url = jdbc:mysql://localhost:3306/goods_db?createDatabaseIfNotExist=true&useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=false&nullNamePatternMatchesAll=true
+jdbc.url = jdbc:mysql://localhost:3306/goods_db?useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=false&nullNamePatternMatchesAll=true
 jdbc.username = root
 jdbc.password = dep16215675
 liquibase.changelog = classpath:changeSets/databaseChangeLog.xml
