--- a/menu/build.gradle
+++ b/menu/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.mockito', name: 'mockito-core'
 }
 
 jar {
