--- a/restApi/src/test/resources/application.yaml
+++ b/restApi/src/test/resources/application.yaml
@@ -1,14 +1,15 @@
 spring:
-  liquibase:
-    url: jdbc:h2:mem:testdb;MODE=MYSQL;DB_CLOSE_DELAY=-1
-    user: root
-    password: dep16215675
-    change-log: classpath:changeSets/databaseChangeLog.xml
-  profiles:
-    active: test
   datasource:
-    platform: mysql
-    driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:testdb;MODE=MYSQL
     username: root
     password: dep16215675
+    driver-class-name: org.h2.Driver
+  liquibase:
+    change-log: classpath:changeSets/databaseChangeLog.xml
+  profiles:
+    active: test
+  jpa:
+    properties:
+      hibernate:
+        hbm2ddl:
+          auto: validate
